--- a/posol/CMakeLists.txt
+++ b/posol/CMakeLists.txt
@@ -6,12 +6,19 @@ cmake_minimum_required(VERSION 3.21.0)
 project(posol)
 
 # Collect source files.
-file(GLOB_RECURSE HeaderFiles RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.h" "*.inl")
-file(GLOB_RECURSE SourceFiles RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp")
+set(IncludeDir "${CMAKE_CURRENT_SOURCE_DIR}/include")
+set(SourceDir "${CMAKE_CURRENT_SOURCE_DIR}/src")
+file(GLOB_RECURSE HeaderFiles RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${IncludeDir}/*.h" "${IncludeDir}/*.inl")
+file(GLOB_RECURSE SourceFiles RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${SourceDir}/*.cpp")
 
 # Define the output.
 add_library(${PROJECT_NAME} ${HeaderFiles} ${SourceFiles})
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
+
+target_include_directories(${PROJECT_NAME}
+    PUBLIC
+        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+        $<BUILD_INTERFACE:${IncludeDir}>)
 
 # Configure the linker.
 target_link_libraries(${PROJECT_NAME} power_overwhelming)
@@ -23,3 +30,16 @@ target_link_libraries(${PROJECT_NAME} lua)
 # Sol
 find_package(sol2 CONFIG REQUIRED)
 target_link_libraries(${PROJECT_NAME} sol2)
+
+# Install
+install(TARGETS ${PROJECT_NAME}
+    EXPORT ${PROJECT_NAME}Targets
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+
+install(DIRECTORY include/
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+
+install(EXPORT ${PROJECT_NAME}Targets
+    FILE ${PROJECT_NAME}Config.cmake
+    NAMESPACE ${PROJECT_NAME}::
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
